# SOFT-311-Lab2-MireliaMartinez

./: .gitignore  README.md  assertions.py  pyproject.toml  report.html
.github/workflows/: python_playwright.yml
Lab2_MireliaMartinez.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pages/: about_us_page.py  all_products_page.py  cart_page.py  contact_page.py  favorites_page.py  home_page.py  login_page.py  login_page_td.py  signup_page.py
playwright_automation_base.egg-info/: PKG-INFO  SOURCES.txt
tests/: about_us_test.py  all_products_test.py  assertions.py  cart_test.py  contact_us_no_message_test.py  contact_us_no_subject_test.py  contact_us_test.py  favorites_test.py  home_test.py  login_invalid_test.py  login_test.py  login_valid_test.py  signup_invalid_email_test.py  signup_no_password_test.py  signup_test.py
utils/: screenshot_helper.py
