[project]
name = "Lab2-MireliaMartinez"
version = "0.1.0"
description = "Minimal Python Playwright automation project"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "playwright>=1.54.0",
    "pytest>=8.0.0",
    "pytest-shard>=0.1.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["pages*", "artifacts*", "assets*", "tests*"]